--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
     build: 
       context: ~/express-app
       dockerfile: Dockerfile
+    image: jmmfcoutinho/part-3-3.1:latest
     ports:
       - 8080:8080
 
